welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:5: error: ')' expected but 'if' found.
  if (equalOk==true && (a==b || b==c || (a==b && b==c))) {
  ^inOrderEqual:8: error: ';' expected but 'if' found.
  if (a<b && b<c && equalOk==false) {
  ^